--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-
-
+<div class="container main-container mt-3">
+    <app-form-template></app-form-template>
+    <!-- <app-form-data></app-form-data> -->
+</div>
