--- a/src/app/components/form-template/form-template.component.html
+++ b/src/app/components/form-template/form-template.component.html
@@ -57,6 +57,45 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Nacionalidad</label>
+    <div class="col-8">
+      <select class="form-control" 
+              name="pais"
+              [(ngModel)]="usuarioForm.pais">
+              <option *ngFor="let pais of paises"
+                      value="{{ pais }}">{{ pais }}</option>
+      </select>
+    </div>
+  </div>
+
+  <div class="form-group row">
+      <label class="col-2 col-form-label">Sexo</label>
+      <div class="col-8">
+          <div  *ngFor="let sexo of sexos"
+                class="form-check">
+            <input 
+                    class="form-check-input" 
+                    type="radio" 
+                    value="{{ sexo }}"
+                    [(ngModel)]="usuarioForm.sexo"
+                    name="sexo">
+            <label class="form-check-label" for="exampleRadios">
+              {{ sexo }}
+            </label>
+          </div>
+      </div>
+    </div>
+
+    <div class="form-check">
+      <input  [(ngModel)]="usuarioForm.condiciones"
+              class="form-check-input" 
+              type="checkbox" value=""
+              name="concidiones">
+      <label class="form-check-label" for="defaultCheck1">
+        Acepto las condiciones
+      </label>
+    </div>
 
 
   <div class="form-group row">
@@ -69,3 +108,7 @@
   </div>
 
 </form>
+
+<pre>
+  {{ usuarioForm | json }}
+</pre>
