--- a/src/app/components/form-data/form-data.component.html
+++ b/src/app/components/form-data/form-data.component.html
@@ -1,6 +1,8 @@
 <h4>Formularios <small>template</small></h4>
 <hr>
-<form>
+<form [(formGroup)]="formulario"
+      (ngSubmit)="enviarFormulario()"
+      novalidate>
 
   <div>
 
@@ -10,7 +12,9 @@
 
         <input class="form-control"
                type="text"
-               placeholder="Nombre">
+               placeholder="Nombre"
+               name="nombre"
+               formControlName="nombre">
       </div>
     </div>
 
@@ -20,7 +24,9 @@
 
         <input class="form-control"
                type="text"
-               placeholder="Apellido">
+               placeholder="Apellido"
+               name="apellido"
+               formControlName="apellido">
       </div>
     </div>
 
@@ -32,7 +38,9 @@
 
       <input class="form-control"
              type="email"
-             placeholder="Correo electrónico">
+             placeholder="Correo electrónico"
+             name="email"
+             formControlName="email">
     </div>
   </div>
 
